# jmeter-test-generator

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  TODO.md  build_exe.py  pyproject.toml
docs/: BACKLOG.md  BUILD_EXE.md  PIPELINE_INTEGRATION_PLAN.md  PT_SCENARIO_CHEATSHEET.md  PT_SCENARIO_RULES.md  PT_SCENARIO_SPEC.md  TESTING.md
docs/dev/: ARCHITECTURE.md  CORE_MODULES.md  DEVELOPMENT.md  JMX_FORMAT_REFERENCE.md
docs/v1/: ARCHITECTURE.md  CORE_MODULES.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  JMX_FORMAT_REFERENCE.md  PROJECT_REVIEW.md  README.md
docs/v1/examples/: AUTHENTICATION.md
docs/v2/: ARCHITECTURE.md  CORE_MODULES.md  FEASIBILITY_ANALYSIS.md  IMPLEMENTATION_PLAN.md  PT_SCENARIO_SPEC.md  README.md  VISION.md
docs/v2/ideas/: ALTERNATIVES_CONSIDERED.md  FUTURE_IDEAS.md
docs/v3/: CORE_MODULES.md  IMPLEMENTATION_PLAN.md  README.md
examples/petstore/: README.md  pt_scenario.yaml
examples/simple-crud/: README.md  openapi.yaml  pt_scenario.yaml
jmeter_gen/: __init__.py  cli.py  cli_standalone.py  exceptions.py  mcp_server.py
jmeter_gen/core/: __init__.py  correlation_analyzer.py  data_structures.py  jmx_generator.py  jmx_updater.py  jmx_validator.py  openapi_parser.py  project_analyzer.py  ptscenario_parser.py  scenario_data.py  scenario_jmx_generator.py  scenario_mermaid.py  scenario_validator.py  scenario_visualizer.py  scenario_wizard.py  snapshot_manager.py  spec_comparator.py
jmeter_gen/tests/: __init__.py
tests/: conftest.py  test_cli.py  test_cli_integration.py  test_edge_cases.py  test_error_handling.py  test_mcp_server.py
tests/core/: test_correlation_analyzer.py  test_jmx_generator.py  test_jmx_updater.py  test_jmx_validator.py  test_openapi_parser.py  test_openapi_parser_v2.py  test_project_analyzer.py  test_project_analyzer_v2.py  test_ptscenario_parser.py  test_scenario_data.py  test_scenario_jmx_generator.py  test_scenario_mermaid.py  test_scenario_validator.py  test_scenario_visualizer.py  test_scenario_wizard.py  test_snapshot_manager.py  test_spec_comparator.py
tests/fixtures/scenarios/: invalid_empty_scenario.yaml  invalid_endpoint_format.yaml  invalid_loop_both_count_while.yaml  invalid_loop_neither_count_while.yaml  invalid_missing_name.yaml  invalid_missing_scenario.yaml  invalid_missing_version.yaml  invalid_undefined_variable.yaml  invalid_yaml_syntax.yaml  valid_basic.yaml  valid_full.yaml  valid_loop_count.yaml  valid_loop_while.yaml  valid_loop_with_interval.yaml  valid_method_path.yaml  valid_mixed_endpoints.yaml  valid_multi_step_loop.yaml  valid_multi_step_loop_while.yaml  valid_operationid.yaml  valid_with_captures.yaml
