[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jmeter-test-generator"
version = "3.2.2"
description = "Generate JMeter JMX test plans from OpenAPI specifications"
readme = "README.md"
authors = [
    {name = "Krzysztof Zaorski", email = "zaorski+git@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["jmeter", "performance", "testing", "openapi", "swagger", "test-automation"]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
    "questionary>=2.0.0",
    # MCP SDK requires specific versions of these dependencies
    "pydantic>=2.7.0",
    "anyio>=4.5",
    "httpx>=0.27",
    "pydantic-settings>=2.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
jmeter-gen = "jmeter_gen.cli:main"

[project.urls]
Homepage = "https://github.com/kzaorski/jmeter-test-generator"
Documentation = "https://github.com/kzaorski/jmeter-test-generator/docs"
Repository = "https://github.com/kzaorski/jmeter-test-generator"
Issues = "https://github.com/kzaorski/jmeter-test-generator/issues"

[tool.setuptools]
packages = ["jmeter_gen", "jmeter_gen.core"]

[tool.setuptools.package-data]
jmeter_gen = ["templates/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=jmeter_gen --cov-report=term-missing --cov-report=html"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "unit: marks unit tests",
    "v2: marks v2 scenario-based tests",
    "v3: marks v3 wizard tests",
]

[tool.coverage.run]
source = ["jmeter_gen"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
